--- a/package.json
+++ b/package.json
@@ -1,36 +1,34 @@
 {
-  "name": "javascript-rules-editor",
-  "scripts": {
-    "prettify": "prettier --check src/**/*.js",
-    "build": "babel --stage 1 -d dist/ src/",
-    "watch": "babel --watch --stage 1 -d dist/ src",
-    "test": "jest",
-    "test:watch": "jest --watch"
+  "name": "js-rules",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-scripts": "3.4.0"
   },
-  "version": "1.0.0",
-  "main": "src/index.js",
-  "repository": "https://github.com/jinxac/javascript-rules-editor.git",
-  "author": "<saluja.harkirat@gmail.com>",
-  "license": "MIT",
-  "devDependencies": {
-
-    "babel-cli": "6.26.0",
-    "babel-core": "6.26.3",
-    "babel-eslint": "^10.0.3",
-    "@babel/preset-env": "^7.3.4",
-    "babel-loader": "8.0.6",
-    "babel-jest": "^24.1.0",
-    "babel-polyfill": "6.26.0",
-    "babel-preset-es2015": "~6.24.1",
-    "babel-preset-stage-0": "~6.24.1",
-    "babel-register": "6.26.0",
-    "eslint": "^5.7.0",
-    "eslint-config-eslint": "^5.0.1",
-    "eslint-friendly-formatter": "^4.0.1",
-    "eslint-loader": "^2.1.1",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^7.0.1",
-    "prettier": "1.19.1",
-    "jest": "^24.9.0"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
